--- a/os1/.cargo/config
+++ b/os1/.cargo/config
@@ -5,3 +5,7 @@ target = "riscv64gc-unknown-none-elf"
 rustflags = [
     "-Clink-arg=-Tsrc/linker.ld", "-Cforce-frame-pointers=yes"
 ]
+
+[profile.release]
+debug = true
+opt-level = 0
